--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=personal_website
+spring.application.name=blog
+
+spring.datasource.url=jdbc:mysql://db-prod:3306/blog?useSSL=true&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
+spring.jpa.hibernate.ddl-auto=validate      
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=false         
+spring.jpa.properties.hibernate.format_sql=false
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true    
+
+
+logging.level.org.hibernate.SQL=info 
+logging.level.org.hibernate.type=info
+logging.level.root=warn
