--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -17,3 +17,6 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.flywaydb=DEBUG
 
+app.bootstrap.admin.username=admin123
+app.bootstrap.admin.password=admin123
+
