--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -20,3 +20,7 @@ logging.level.org.flywaydb=DEBUG
 app.bootstrap.admin.username=admin123
 app.bootstrap.admin.password=admin123
 
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
