--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 spring.application.name=blog
 
-spring.datasource.url=jdbc:mysql://db-prod:3306/blog?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db-prod:3306/blog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
-spring.jpa.hibernate.ddl-auto=validate      
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
-spring.jpa.show-sql=false         
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true    
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
 
-
-logging.level.org.hibernate.SQL=info 
-logging.level.org.hibernate.type=info
-logging.level.root=warn
+app.bootstrap.admin.username=${ADMIN_USER}
+app.bootstrap.admin.password=${ADMIN_PASS}
