--- a/infra/prod/docker-compose.yaml
+++ b/infra/prod/docker-compose.yaml
@@ -6,6 +6,8 @@ networks:
 
 volumes:
   mysqldata: {}
+  le_conf: {}      # <— declare the volumes used by edge/certbot
+  le_webroot: {}
 
 services:
   db:
@@ -26,15 +28,14 @@ services:
       - mysqldata:/var/lib/mysql
     networks:
       backend:
-        aliases:
-          - db-prod
-    expose:
-      - "3306"
+        aliases: [ db-prod ]
+    expose: [ "3306" ]
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1" ]
-      interval: 10s
-      timeout: 5s
-      retries: 30
+      test: [ "CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u root -p\"$MYSQL_ROOT_PASSWORD\" --silent" ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+      start_period: 20s
 
   backend:
     build:
@@ -55,12 +56,6 @@ services:
     expose:
       - "8080"
     networks: [backend]
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/actuator/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 30
-      start_period: 30s
 
   frontend:
     build:
@@ -70,12 +65,6 @@ services:
     expose:
       - "3000"
     networks: [backend]
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:3000/ || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 30
-
 
   edge:
     build:
@@ -84,12 +73,25 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       backend:
         condition: service_started
       frontend:
-        condition: service_healthy
-    networks:
-      - web
-      - backend
+        condition: service_started
+    networks: [ web, backend ]
+    volumes:
+      - le_conf:/etc/letsencrypt
+      - le_webroot:/var/www/certbot
+
+  certbot:
+    image: certbot/certbot:latest
+    restart: "no"
+    networks: [ web ]
+    volumes:
+      - le_conf:/etc/letsencrypt
+      - le_webroot:/var/www/certbot
+    entrypoint: sh
+    command: -c "sleep infinity"
+
 
